atualizado do arquivo leiame